# rocket-taskify

./: .gitignore  README.md  ai_prompts.md
.github/workflows/: Integration_tests.yml  build_test_deploy.yml
backend/: Cargo.toml  ai_prompts.md  stored_procedure_example.sql  task.rs
backend/migration/src/: lib.rs  m20250204_170857_create_tasks_table.rs  m20250227_221505_create_user_table.rs  m20250301_011213_create_profile_table.rs  m20250320_091729_create_revoked_tokens_table.rs  main.rs
backend/src/: cors.rs  error_responder.rs  lib.rs  main.rs  setup.rs
backend/src/accounts/: auth_responder.rs  base_user.rs  interface.rs  jwt.rs  middlewares.rs  mod.rs  user.rs  users.rs  utils.rs
backend/src/api/: auth.rs  base_sql.sql  mod.rs  new_task.rs  request_responder.rs  task.rs
backend/src/config/: setup.rs
backend/src/entities/: mod.rs  prelude.rs  profile.rs  revoked_tokens.rs  task.rs  user.rs
backend/src/interfaces/: mod.rs  new_task.rs  task_dto.rs  task_priority.rs  user.rs
backend/src/models/: mod.rs  task_model.rs
backend/src/resources/: base_sql.rs  mod.rs
backend/src/tasks/: mod.rs
backend/tests/: api_tests.rs  business_logic_tests.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  input.css
frontend/src/api/: TaskApi.ts
frontend/src/components/: Footer.tsx  Header.tsx  Home.tsx
frontend/src/components/Footer/: ContactItem.tsx  SocialItem.tsx
frontend/src/components/Task/: CrossedTaskItem.tsx  Modal.tsx  (+3 more)
frontend/src/interfaces/: Task.ts
src/: main.rs
src/entities/: mod.rs  prelude.rs  user.rs
