[package]
name = "rust-rocket-tasker"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5", features = ["json"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path="migration" }
tokio = {version = "1.43", features = ["full"]}
serde = { version="1", features = ["derive"]}
serde_json = "1"
dotenvy = "0.15"    