[package]
name = "rocket_taskify"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.0", features = ["json"]}
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
tokio = {version = "1.43", features = ["full"]}
serde = { version="1", features = ["derive"]}
serde_json = "1"   
chrono = "0.4.39"
thiserror = "2.0.11"
async-trait = "0.1.86"
reqwest = "0.12.12"

[global]
log = "debug"
